# django-debug-false-checker

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg  tbump.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml
django_debug_false_checker/: __main__.py  _ast_check.py  _regex_check.py
tests/: test_integration.py
tests/fixtures/actual_settings/: settings.py
tests/fixtures/black_formatting/: settings.py
tests/fixtures/multiple_assignment/: settings.py
tests/fixtures/non_black_formatting/: settings.py
tests/fixtures/non_black_formatting_false/: settings.py
tests/fixtures/non_black_formatting_harder/: settings.py
tests/fixtures/standard_formatting/: settings.py
tests/fixtures/standard_formatting_false/: settings.py
tests/fixtures/strange_formatting/: settings.py
tests/fixtures/strange_formatting_false/: settings.py
tests/fixtures/tuple_assign/: settings.py
tests/fixtures/tuple_assign_false/: settings.py
